Fix gap in instructions

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ button {
     padding: 20px;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
     background-color: rgb(203, 156, 248);
 }
 
